# angularjs-lsp

./: .gitignore  Cargo.toml  README.md  UNSUPPORTED_FEATURES.md  package-lock.json
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
claude-plugin/: .lsp.json
claude-plugin/.claude-plugin/: plugin.json
docs/: performance-improvements.md
src/: config.rs  diagnostics.rs  error.rs  lib.rs  main.rs  server.rs  util.rs
src/analyzer/: angularjs.rs  html_angularjs.rs  html_parser.rs  mod.rs
src/cache/: error.rs  loader.rs  metadata.rs  mod.rs  schema.rs  writer.rs
src/config/: ajs_config.rs  mod.rs  path_matcher.rs
src/handler/: builtin_services.rs  code_action.rs  codelens.rs  completion.rs  definition.rs  diagnostics.rs  document_highlight.rs  document_symbol.rs  hover.rs  inlay_hints.rs  mod.rs  references.rs  rename.rs  resolve.rs  semantic_tokens.rs  signature_help.rs  workspace_symbol.rs
src/handlers/: codelens.rs  completion.rs  document_symbol.rs  hover.rs  mod.rs  references.rs  rename.rs  semantic_tokens.rs  signature_help.rs
src/index/: component_store.rs  controller_store.rs  definition_store.rs  di_usage_store.rs  diagnostics_store.rs  export_store.rs  html_resolve.rs  mod.rs  (+6 more)
src_old/: config.rs  main.rs  server.rs
test-class-syntax/: app.js  index.html
tests/: angularjs_common_syntax_test.rs  code_action_test.rs  diagnose_unknown_di_service_test.rs  investigate_unsupported_test.rs  signature_help_test.rs
vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
(+96 files in other folders)
