[package]
name = "angularjs-lsp"
version = "0.1.0"
edition = "2024"
authors = ["mochi"]
description = "Language Server Protocol implementation for AngularJS 1.x"
license = "MIT"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-html = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
globset = "0.4"
bincode = "1"

[dev-dependencies]
rstest = "0.24"

[profile.release]
lto = true
strip = true
